[package]
name    = "cargo-espflash"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow              = "1.0.62"
clap                = { version = "3.2.17", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
espflash            = { path = "../espflash" }
log                 = "0.4.17"
strum               = "0.24.1"
