[package]
name    = "espflash"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow              = "1.0.62"
clap                = { version = "3.2.17", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
log                 = "0.4.17"
parse_int           = "0.6.0"
strum               = "0.24.1"
strum_macros        = "0.24.3"
tracing-subscriber  = "0.3.15"
