[package]
name    = "espflash"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap            = { version = "3.2.17", features = ["derive"] }
env_logger      = "0.9.0"
log             = "0.4.17"
parse_int       = "0.6.0"
strum           = "0.24.1"
strum_macros    = "0.24.3"
update-informer = "0.5.0"
